# ssh-m

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/blockchain/: bitcoin.rs  evm.rs  solana.rs  types.rs
src-tauri/src/commands/: blockchain.rs  mod.rs  onepassword.rs  ssh.rs
src-tauri/src/crypto/: bitcoin.rs  evm.rs  mod.rs  solana.rs  types.rs
src-tauri/src/onepassword/: cli.rs  types.rs
src-tauri/src/ssh/: config.rs  types.rs
src/components/Blockchain/: AccountCard.tsx
src/components/Layout/: Layout.tsx  Sidebar.tsx
src/components/SSH/: SshConfigEditor.tsx  SshHostCard.tsx  index.ts
src/hooks/: useBlockchain.ts  useOnePassword.ts  useSshHosts.ts  useTheme.ts
src/pages/: BlockchainAccounts.tsx  Settings.tsx  SshManager.tsx
src/services/: tauri.ts
src/types/: blockchain.ts  index.ts  onepassword.ts  ssh.ts
