[package]
name = "ssh-m"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_m_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# SSH config parsing
ssh2-config = "0.7"

# 1Password CLI integration
which = "7"

# Crypto / BIP39 / key derivation
bip39 = "2"
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
secp256k1 = { version = "0.29", features = ["rand-std"] }

# EVM
alloy = { version = "1", features = ["full", "provider-http", "sol-types"] }

# Solana
solana-sdk = "2"
solana-client = "2"

# Bitcoin balance via REST API
reqwest = { version = "0.12", features = ["json"] }

# Utility
anyhow = "1"
thiserror = "2"
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
glob = "0.3"
